<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_title"
        android:textAlignment="center"
        android:textSize="23dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#A9A9A9"
        android:textSize="15dp"
        android:text="@string/term1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#A9A9A9"
        android:textSize="15dp"
        android:text="@string/term2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#A9A9A9"
        android:textSize="15dp"
        android:text="@string/term3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#A9A9A9"
        android:textSize="15dp"
        android:text="@string/term4"/>

    <View android:background="#000000"
        android:layout_width = "match_parent"
        android:layout_height="2dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_title_marathi"
        android:textAlignment="center"
        android:textSize="23dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#A9A9A9"
        android:textSize="15dp"
        android:text="@string/term1_marathi"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#A9A9A9"
        android:textSize="15dp"
        android:text="@string/term2_marathi"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#A9A9A9"
        android:textSize="15dp"
        android:text="@string/term3_marathi"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#A9A9A9"
        android:textSize="15dp"
        android:text="@string/term4_marathi"/>

</LinearLayout>

</android.support.v4.widget.NestedScrollView>
